plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.0.0'
    id 'net.kyori.blossom' version '1.2.0'
}

group = 'eu.revanox.skyblock'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://repo.infernalsuite.com/repository/maven-snapshots/' }
    maven { url 'https://repo.rapture.pw/repository/maven-releases/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://reposilite.koboo.eu/releases' }
    maven { url 'https://s01.oss.sonatype.org/content/groups/public/' }

}

dependencies {
    compileOnly "io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT"

    compileOnly "com.infernalsuite.aswm:api:1.20.6-R0.1-SNAPSHOT"
    compileOnly "com.flowpowered:flow-nbt:2.0.2"

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    testCompileOnly 'org.projectlombok:lombok:1.18.36'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'

    implementation 'eu.koboo:en2do:3.1.10'

    implementation("fr.mrmicky:fastboard:2.1.3")
    implementation 'io.github.rysefoxx.inventory:RyseInventory-Plugin:1.6.5'

    compileOnly 'net.luckperms:api:5.4'

    implementation 'org.reflections:reflections:0.10.2'


}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(23))
    targetCompatibility = JavaVersion.VERSION_23
    sourceCompatibility = JavaVersion.VERSION_23
}

compileJava {
    options.fork = true
    options.incremental = true
    options.encoding = 'UTF-8'
    options.release.set(23)
}